--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -6,7 +6,7 @@ LABEL DevopsEngg="Anup"
 WORKDIR /opt/
 ADD https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.99/bin/apache-tomcat-8.5.99.tar.gz .
 RUN tar -xzvf apache-tomcat-8.5.99.tar.gz 
-RUN yum install java -y
+RUN yum install openjdk-11-jdk -y
 WORKDIR /opt/apache-tomcat-8.5.99
 COPY student.war  webapps/student.war
 COPY context.xml conf/context.xml
