--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -2,7 +2,7 @@ FROM centos:7
 
 LABEL APP="Studentapp"
 LABEL DevopsEngg="Anup"
-#USER root
+USER root
 WORKDIR /opt/
 ADD https://dlcdn.apache.org/tomcat/tomcat-8/v8.5.99/bin/apache-tomcat-8.5.99.tar.gz .
 RUN tar -xzvf apache-tomcat-8.5.99.tar.gz 
