--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -1,14 +1,18 @@
-# version:  "3.8"
+version:  "3.8"
 
-# services: 
-#   backendimg:
-#     build: /root/DockerImage_studentapp_threetier/Backend/
-#     container_name : backend
-#     ports: 
-#       - 8080:8080
-#   frontendimg:  
-#     build:  /root/DockerImage_studentapp_threetier/Frontend/
-#     container_name: frontend
-#     ports: 
-#       - 80:80
+services: 
+  backendimg:
+    build: /root/DockerImage_studentapp_threetier/Backend/
+    container_name : backend
+    ports: 
+      - 8080:8080
+    network:
+        bridge
+  frontendimg:  
+    build:  /root/DockerImage_studentapp_threetier/Frontend/
+    container_name: frontend
+    ports: 
+      - 80:80
+    network:
+        bridge
     
