--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     container_name: frontend
     ports: 
       - 80:80
+    depends_on: backendimg
     network_mode:
         bridge
     
