--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     container_name: frontend
     ports: 
       - 80:80
-    depends_on: backendimg
+    depends_on: 
+      - backendimg
     network_mode:
         bridge
     
