--- a/Frontend/docker-compose.yml
+++ b/Frontend/docker-compose.yml
@@ -1,9 +1,9 @@
-version: "3.8"
+# version: "3.8"
 
-services:
-  frontendimg:  
-    build: .
-    container_name: frontend
-    ports: 
-      - 80:80
+# services:
+#   frontendimg:  
+#     build: .
+#     container_name: frontend
+#     ports: 
+#       - 80:80
     
